style: fixed background, added nice scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,8 @@ body {
     background-image: url("/static/images/universe.jpg");
     background-size: cover;
     background-position-y: 95px;
+    background-repeat: repeat;
+    height: 100vw;
 }
 
 .main-content {
@@ -75,7 +77,7 @@ body {
 .btn-primary, .btn-secondary, .reg-button, .login-button, .close-button, .vote-close-button {
     font-size: 13px;
     font-weight: 600;
-    background-image: linear-gradient(90deg, #03aefa, #0d5587);
+    background: linear-gradient(90deg, #03aefa, #0d5587);
     color: #020307;
 }
 
@@ -84,7 +86,7 @@ body {
 }
 
 .btn-primary:hover, .reg-button:hover, .login-button:hover, .close-button:hover, .vote-close-button:hover {
-    background-image: linear-gradient(#0d4373, #0d4373);
+    background: linear-gradient(#0d4373, #0d4373);
     border: 1px double #ffffff !important;
 }
 
@@ -93,7 +95,7 @@ body {
 }
 
 .btn-primary:disabled, .btn-primary:disabled {
-    background-image: linear-gradient(#5f5f5f, #5f5f5f);
+    background: linear-gradient(#5f5f5f, #5f5f5f);
 }
 
 .btn-secondary {
@@ -104,7 +106,7 @@ body {
 
 .btn-secondary:hover {
     border: 1px double #03aefa;
-    background-image: linear-gradient(#0d4373, #0d4373);
+    background: linear-gradient(#0d4373, #0d4373);
 }
 
 .btn-resident {
@@ -417,4 +419,22 @@ body {
     left: 0;
     width: 100%;
     margin-top: 50px;
+}
+
+
+/* Scrollbar design */
+
+::-webkit-scrollbar {
+    width: 12px;
+    background: #dddddd;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px #00000070;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, #03aefa, #020307);
+    border-radius: 10px;
+
 }
